@@ -28,14 +28,17 @@
  */
 package com.serotonin.bacnet4j.obj;
 
+import java.util.Objects;
+
 import com.serotonin.bacnet4j.LocalDevice;
 import com.serotonin.bacnet4j.exception.BACnetServiceException;
 import com.serotonin.bacnet4j.obj.mixin.CommandableMixin;
 import com.serotonin.bacnet4j.obj.mixin.HasStatusFlagsMixin;
-import com.serotonin.bacnet4j.obj.mixin.PropertyListMixin;
 import com.serotonin.bacnet4j.obj.mixin.ReadOnlyPropertyMixin;
+import com.serotonin.bacnet4j.obj.mixin.WritablePropertyOutOfServiceMixin;
 import com.serotonin.bacnet4j.obj.mixin.event.IntrinsicReportingMixin;
 import com.serotonin.bacnet4j.obj.mixin.event.eventAlgo.OutOfRangeAlgo;
+import com.serotonin.bacnet4j.obj.mixin.event.faultAlgo.FaultOutOfRangeAlgo;
 import com.serotonin.bacnet4j.type.constructed.EventTransitionBits;
 import com.serotonin.bacnet4j.type.constructed.LimitEnable;
 import com.serotonin.bacnet4j.type.constructed.StatusFlags;
@@ -44,6 +47,7 @@ import com.serotonin.bacnet4j.type.enumerated.EventState;
 import com.serotonin.bacnet4j.type.enumerated.NotifyType;
 import com.serotonin.bacnet4j.type.enumerated.ObjectType;
 import com.serotonin.bacnet4j.type.enumerated.PropertyIdentifier;
+import com.serotonin.bacnet4j.type.enumerated.Reliability;
 import com.serotonin.bacnet4j.type.primitive.Boolean;
 import com.serotonin.bacnet4j.type.primitive.Real;
 import com.serotonin.bacnet4j.type.primitive.UnsignedInteger;
@@ -54,44 +58,51 @@ public class AnalogValueObject extends BACnetObject {
             throws BACnetServiceException {
         super(localDevice, ObjectType.analogValue, instanceNumber, name);
 
+        Objects.requireNonNull(units);
+
         writePropertyInternal(PropertyIdentifier.eventState, EventState.normal);
         writePropertyInternal(PropertyIdentifier.presentValue, new Real(presentValue));
         writePropertyInternal(PropertyIdentifier.units, units);
-        writePropertyInternal(PropertyIdentifier.outOfService, new Boolean(outOfService));
+        writePropertyInternal(PropertyIdentifier.outOfService, Boolean.valueOf(outOfService));
         writePropertyInternal(PropertyIdentifier.statusFlags, new StatusFlags(false, false, false, outOfService));
+        writePropertyInternal(PropertyIdentifier.reliability, Reliability.noFaultDetected);
 
         // Mixins
         addMixin(new HasStatusFlagsMixin(this));
         addMixin(new CommandableMixin(this, PropertyIdentifier.presentValue));
-        addMixin(new ReadOnlyPropertyMixin(this, PropertyIdentifier.eventMessageTexts));
-        addMixin(new PropertyListMixin(this));
-
-        // ?? minPresValue
-        // ?? maxPresValue
-        // ?? resolution
-        // ?? faultHighLimit
-        // ?? faultLowLimit
+        addMixin(new WritablePropertyOutOfServiceMixin(this, PropertyIdentifier.reliability));
+        addMixin(
+                new ReadOnlyPropertyMixin(this, PropertyIdentifier.ackedTransitions, PropertyIdentifier.eventTimeStamps,
+                        PropertyIdentifier.eventMessageTexts, PropertyIdentifier.resolution));
     }
 
     public AnalogValueObject supportIntrinsicReporting(final int timeDelay, final int notificationClass,
-            final float highLimit, final float lowLimit, final float deadband, final LimitEnable limitEnable,
-            final EventTransitionBits eventEnable, final NotifyType notifyType, final int timeDelayNormal) {
+            final float highLimit, final float lowLimit, final float deadband, final float faultHighLimit,
+            final float faultLowLimit, final LimitEnable limitEnable, final EventTransitionBits eventEnable,
+            final NotifyType notifyType, final int timeDelayNormal) {
+        Objects.requireNonNull(limitEnable);
+        Objects.requireNonNull(eventEnable);
+        Objects.requireNonNull(notifyType);
 
         // Prepare the object with all of the properties that intrinsic reporting will need.
-        // User-defined properties
         writePropertyInternal(PropertyIdentifier.timeDelay, new UnsignedInteger(timeDelay));
         writePropertyInternal(PropertyIdentifier.notificationClass, new UnsignedInteger(notificationClass));
         writePropertyInternal(PropertyIdentifier.highLimit, new Real(highLimit));
         writePropertyInternal(PropertyIdentifier.lowLimit, new Real(lowLimit));
         writePropertyInternal(PropertyIdentifier.deadband, new Real(deadband));
+        writePropertyInternal(PropertyIdentifier.faultHighLimit, new Real(faultHighLimit));
+        writePropertyInternal(PropertyIdentifier.faultLowLimit, new Real(faultLowLimit));
         writePropertyInternal(PropertyIdentifier.limitEnable, limitEnable);
         writePropertyInternal(PropertyIdentifier.eventEnable, eventEnable);
         writePropertyInternal(PropertyIdentifier.notifyType, notifyType);
         writePropertyInternal(PropertyIdentifier.timeDelayNormal, new UnsignedInteger(timeDelayNormal));
-        writePropertyInternal(PropertyIdentifier.eventDetectionEnable, new Boolean(true));
+        writePropertyInternal(PropertyIdentifier.eventDetectionEnable, Boolean.TRUE);
 
         // Now add the mixin.
-        addMixin(new IntrinsicReportingMixin(this, new OutOfRangeAlgo(), null, //
+        addMixin(new IntrinsicReportingMixin(this, new OutOfRangeAlgo(),
+                new FaultOutOfRangeAlgo(PropertyIdentifier.faultLowLimit, PropertyIdentifier.faultHighLimit,
+                        PropertyIdentifier.reliability),
+                PropertyIdentifier.presentValue, //
                 new PropertyIdentifier[] { PropertyIdentifier.presentValue, PropertyIdentifier.highLimit,
                         PropertyIdentifier.lowLimit, PropertyIdentifier.deadband, PropertyIdentifier.limitEnable }));
 
@@ -99,7 +110,7 @@ public class AnalogValueObject extends BACnetObject {
     }
 
     public AnalogValueObject supportCovReporting(final float covIncrement) {
-        _supportCovReporting(new Real(covIncrement));
+        _supportCovReporting(new Real(covIncrement), null);
         return this;
     }
 
