@@ -28,11 +28,16 @@
  */
 package com.serotonin.bacnet4j.obj;
 
+import java.util.Objects;
+
 import com.serotonin.bacnet4j.LocalDevice;
 import com.serotonin.bacnet4j.exception.BACnetServiceException;
+import com.serotonin.bacnet4j.obj.mixin.ActiveTimeMixin;
 import com.serotonin.bacnet4j.obj.mixin.CommandableMixin;
 import com.serotonin.bacnet4j.obj.mixin.HasStatusFlagsMixin;
-import com.serotonin.bacnet4j.obj.mixin.PropertyListMixin;
+import com.serotonin.bacnet4j.obj.mixin.ReadOnlyPropertyMixin;
+import com.serotonin.bacnet4j.obj.mixin.StateChangeMixin;
+import com.serotonin.bacnet4j.obj.mixin.WritablePropertyOutOfServiceMixin;
 import com.serotonin.bacnet4j.obj.mixin.event.IntrinsicReportingMixin;
 import com.serotonin.bacnet4j.obj.mixin.event.eventAlgo.ChangeOfStateAlgo;
 import com.serotonin.bacnet4j.type.constructed.EventTransitionBits;
@@ -42,6 +47,7 @@ import com.serotonin.bacnet4j.type.enumerated.EventState;
 import com.serotonin.bacnet4j.type.enumerated.NotifyType;
 import com.serotonin.bacnet4j.type.enumerated.ObjectType;
 import com.serotonin.bacnet4j.type.enumerated.PropertyIdentifier;
+import com.serotonin.bacnet4j.type.enumerated.Reliability;
 import com.serotonin.bacnet4j.type.primitive.Boolean;
 import com.serotonin.bacnet4j.type.primitive.CharacterString;
 import com.serotonin.bacnet4j.type.primitive.UnsignedInteger;
@@ -51,31 +57,43 @@ public class BinaryValueObject extends BACnetObject {
             final BinaryPV presentValue, final boolean outOfService) throws BACnetServiceException {
         super(localDevice, ObjectType.binaryValue, instanceNumber, name);
 
+        Objects.requireNonNull(presentValue);
+
         writePropertyInternal(PropertyIdentifier.eventState, EventState.normal);
-        writePropertyInternal(PropertyIdentifier.outOfService, new Boolean(outOfService));
+        writePropertyInternal(PropertyIdentifier.outOfService, Boolean.valueOf(outOfService));
         writePropertyInternal(PropertyIdentifier.statusFlags, new StatusFlags(false, false, false, outOfService));
+        writePropertyInternal(PropertyIdentifier.reliability, Reliability.noFaultDetected);
 
         // Mixins
         addMixin(new HasStatusFlagsMixin(this));
         addMixin(new CommandableMixin(this, PropertyIdentifier.presentValue));
-        addMixin(new PropertyListMixin(this));
+        addMixin(new WritablePropertyOutOfServiceMixin(this, PropertyIdentifier.reliability));
+        addMixin(new ReadOnlyPropertyMixin(this, PropertyIdentifier.ackedTransitions,
+                PropertyIdentifier.eventTimeStamps, PropertyIdentifier.eventMessageTexts));
 
         writePropertyInternal(PropertyIdentifier.presentValue, presentValue);
 
-        // ?? changeOfStateTime
-        // ?? changeOfStateCount
-        // ?? timeOfStateCountReset
-        // ?? elapsedActiveTime
-        // ?? timeOfActiveTimeReset
+        addMixin(new StateChangeMixin(this));
     }
 
-    public void addStateText(final String inactive, final String active) {
+    public BinaryValueObject supportStateText(final String inactive, final String active) {
         writePropertyInternal(PropertyIdentifier.inactiveText, new CharacterString(inactive));
         writePropertyInternal(PropertyIdentifier.activeText, new CharacterString(active));
+        return this;
     }
 
-    public void supportIntrinsicReporting(final int timeDelay, final int notificationClass, final BinaryPV alarmValue,
-            final EventTransitionBits eventEnable, final NotifyType notifyType, final int timeDelayNormal) {
+    public BinaryValueObject supportActiveTime() {
+        addMixin(new ActiveTimeMixin(this, false));
+        return this;
+    }
+
+    public BinaryValueObject supportIntrinsicReporting(final int timeDelay, final int notificationClass,
+            final BinaryPV alarmValue, final EventTransitionBits eventEnable, final NotifyType notifyType,
+            final int timeDelayNormal) {
+        Objects.requireNonNull(alarmValue);
+        Objects.requireNonNull(eventEnable);
+        Objects.requireNonNull(notifyType);
+
         // Prepare the object with all of the properties that intrinsic reporting will need.
         // User-defined properties
         writePropertyInternal(PropertyIdentifier.timeDelay, new UnsignedInteger(timeDelay));
@@ -84,20 +102,22 @@ public class BinaryValueObject extends BACnetObject {
         writePropertyInternal(PropertyIdentifier.eventEnable, eventEnable);
         writePropertyInternal(PropertyIdentifier.notifyType, notifyType);
         writePropertyInternal(PropertyIdentifier.timeDelayNormal, new UnsignedInteger(timeDelayNormal));
-        writePropertyInternal(PropertyIdentifier.eventDetectionEnable, new Boolean(true));
+        writePropertyInternal(PropertyIdentifier.eventDetectionEnable, Boolean.TRUE);
 
         final ChangeOfStateAlgo eventAlgo = new ChangeOfStateAlgo(PropertyIdentifier.presentValue,
                 PropertyIdentifier.alarmValue);
-        addMixin(new IntrinsicReportingMixin(this, eventAlgo, null,
-                new PropertyIdentifier[] { PropertyIdentifier.presentValue }));
+        addMixin(new IntrinsicReportingMixin(this, eventAlgo, null, PropertyIdentifier.presentValue,
+                new PropertyIdentifier[] { PropertyIdentifier.presentValue, PropertyIdentifier.alarmValue }));
+        return this;
     }
 
     public BinaryValueObject supportCovReporting() {
-        _supportCovReporting(null);
+        _supportCovReporting(null, null);
         return this;
     }
 
     public BinaryValueObject supportCommandable(final BinaryPV relinquishDefault) {
+        Objects.requireNonNull(relinquishDefault);
         super._supportCommandable(relinquishDefault);
         return this;
     }
